--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ng2-charts": "^2.3.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "underscore": "^1.9.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
